--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Вязание на заказ — Интернет-магазин «Мишка»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
