Minor markup fixes

--- a/source/index.html
+++ b/source/index.html
@@ -94,9 +94,8 @@
       </section>
 
       <section class="reviews">
-        <div class="reviews_wrapper">
+        <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
-          <div class="slider">
             <ul class="reviews__list slider__list">
               <li class="reviews__item slider__item">
                 <blockquote class="review">
@@ -112,7 +111,6 @@
               <button class="slider__control slider__control--previous" type="button">Предыдущий отзыв</button>
               <button class="slider__control slider__control--next" type="button">Следующий отзыв</button>
             </div>
-          </div>
           <a class="reviews__btn btn" href="review.html">Написать</a>
         </div>
       </section>
