Add header basic styles

--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
         </nav>
       </div>
       <div class="main-header__bottom main-header__bottom--image">
-        <h1 class="main-header__title">Милые штуки ручной работы для дома</h1>
+        <h1 class="main-header__title">Милые штуки ручной<br> работы для дома</h1>
       </div>
     </header>
 
