--- a/source/index.html
+++ b/source/index.html
@@ -38,10 +38,14 @@
       <div class="category">
         <ul class="category__list">
           <li class="category__item">
-            <a class="category__link category__link--interior" href="interior.html">Предметы интерьера</a>
+            <a class="category__link category__link--interior" href="interior.html">
+              <span>Предметы интерьера</span>
+            </a>
           </li>
           <li class="category__item">
-            <a class="category__link category__link--toys" href="toys.html">Детские игрушки</a>
+            <a class="category__link category__link--toys" href="toys.html">
+              <span>Детские игрушки</span>
+            </a>
           </li>
         </ul>
       </div>
