--- a/source/index.html
+++ b/source/index.html
@@ -100,21 +100,25 @@
       <section class="reviews">
         <div class="reviews__wrapper slider">
           <h2 class="reviews__title">Отзывы</h2>
-            <ul class="reviews__list slider__list">
-              <li class="reviews__item slider__item">
-                <blockquote class="review">
-                  <p class="review__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-                  <cite class="review__author">
-                    <b class="review__author-name">Анастасия Красильникова</b>
-                    <span class="review__author-nick">@misssssiskras</span>
-                  </cite>
-                </blockquote>
-              </li>
-            </ul>
-            <div class="slider__controls">
-              <button class="slider__control slider__control--previous" type="button">Предыдущий отзыв</button>
-              <button class="slider__control slider__control--next" type="button">Следующий отзыв</button>
-            </div>
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item">
+              <blockquote class="review">
+                <p class="review__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+                <cite class="review__author">
+                  <b class="review__author-name">Анастасия Красильникова</b>
+                  <span class="review__author-nick">@misssssiskras</span>
+                </cite>
+              </blockquote>
+            </li>
+          </ul>
+          <div class="slider__controls">
+            <button class="slider__control slider__control--previous" type="button">
+              <span class="visually-hidden">Предыдущий отзыв</span>
+            </button>
+            <button class="slider__control slider__control--next" type="button">
+              <span class="visually-hidden">Следующий отзыв</span>
+            </button>
+          </div>
           <a class="reviews__btn btn" href="review.html">Написать</a>
         </div>
       </section>
