--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,7 +51,9 @@
               </div>
               <div class="product__bottom">
                 <b class="product__price">1 200 руб.</b>
-                <a class="product__to-cart" href="order.html">Заказать</a>
+                <a class="product__to-cart" href="order.html">
+                  <span class="visually-hidden">Заказать</span>
+                </a>
               </div>
             </div>
           </li>
@@ -68,7 +70,9 @@
               </div>
               <div class="product__bottom">
                 <b class="product__price">690 руб.</b>
-                <a class="product__to-cart" href="order.html">Заказать</a>
+                <a class="product__to-cart" href="order.html">
+                  <span class="visually-hidden">Заказать</span>
+                </a>
               </div>
             </div>
           </li>
@@ -85,7 +89,9 @@
               </div>
               <div class="product__bottom">
                 <b class="product__price">1 500 руб.</b>
-                <a class="product__to-cart" href="order.html">Заказать</a>
+                <a class="product__to-cart" href="order.html">
+                  <span class="visually-hidden">Заказать</span>
+                </a>
               </div>
             </div>
           </li>
@@ -108,13 +114,19 @@
     <footer class="main-footer">
       <ul class="main-footer__social social">
         <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">Инстаграм</a>
+          <a class="social__link social__link--instagram" href="#">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">Фейсбук</a>
+          <a class="social__link social__link--facebook" href="#">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--twitter" href="#">Твиттер</a>
+          <a class="social__link social__link--twitter" href="#">
+            <span class="visually-hidden">Твиттер</span>
+          </a>
         </li>
       </ul>
 
