Add video player styles

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -98,11 +98,13 @@
         </ul>
       </section>
 
-      <section class="video">
+      <section class="main-content__video video">
         <h2 class="video__title">Процесс производства</h2>
         <div class="video__player">
           <img class="video__preview" src="http://placehold.it/260x150" width="260" height="150" alt="Видео процесса производства наших товаров">
-          <button class="video__btn-play" type="button">Воспроизвести</button>
+          <button class="video__btn-play" type="button">
+            <span class="visually-hidden">Воспроизвести</span>
+          </button>
         </div>
         <div class="video__bottom">
           <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
