Make navigation adaptive.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,16 +14,16 @@
           </a>
           <button class="main-nav__toggle" type="button">Открыть меню</button>
           <ul class="main-nav__list">
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--primary">
               <a class="main-nav__link">Каталог товаров</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--primary">
               <a class="main-nav__link" href="form.html">Вязание на заказ</a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--search" href="#">Поиск по сайту</a>
+            <li class="main-nav__item main-nav__item--user">
+              <a class="main-nav__link main-nav__link--search" href="#"><span>Поиск по сайту</span></a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--user">
               <a class="main-nav__link main-nav__link--cart" href="#">Корзина: пока пуста</a>
             </li>
           </ul>
