--- a/source/index.html
+++ b/source/index.html
@@ -14,20 +14,27 @@
           </a>
           <button class="main-nav__toggle" type="button">Открыть меню</button>
           <ul class="main-nav__list">
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--primary">
               <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--primary">
               <a class="main-nav__link" href="form.html">Вязание на заказ</a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link main-nav__link--search" href="#">Поиск по сайту</a>
+            <li class="main-nav__item main-nav__item--user">
+              <a class="main-nav__link main-nav__link--search" href="#"><span>Поиск по сайту</span></a>
             </li>
-            <li class="main-nav__item">
+            <li class="main-nav__item main-nav__item--user">
               <a class="main-nav__link main-nav__link--cart" href="#">Корзина: пока пуста</a>
+            </li>
+            <li class="main-nav__item main-nav__item--optional">
+              <a class="main-nav__link" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__item main-nav__item--optional">
+              <a class="main-nav__link" href="#">Распродажа</a>
             </li>
           </ul>
         </nav>
+        <p class="main-header__delivery">Бесплатная доставка по России</p>
       </div>
       <div class="main-header__bottom main-header__bottom--image">
         <h1 class="main-header__title">Милые штуки ручной<br> работы для дома</h1>
