--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,8 +26,15 @@
             <li class="main-nav__item main-nav__item--user">
               <a class="main-nav__link main-nav__link--cart" href="#">Корзина: пока пуста</a>
             </li>
+            <li class="main-nav__item main-nav__item--optional">
+              <a class="main-nav__link" href="#">Новые поступления</a>
+            </li>
+            <li class="main-nav__item main-nav__item--optional">
+              <a class="main-nav__link" href="#">Распродажа</a>
+            </li>
           </ul>
         </nav>
+        <p class="main-header__delivery">Бесплатная доставка по России</p>
       </div>
       <div class="main-header__bottom">
         <h1 class="main-header__title">Каталог товаров</h1>
