--- a/source/index.html
+++ b/source/index.html
@@ -98,12 +98,12 @@
         <div class="advantages__wrapper">
           <h2 class="advantages__title">Коротко о нас:</h2>
           <ul class="advantages__list">
-            <li class="advantages__item advantages__item--eco">Экологически чистые материалы</li>
-            <li class="advantages__item advantages__item--price">Скандинавский стиль по российской цене</li>
-            <li class="advantages__item advantages__item--likes">Увеличивает лайки на фотографиях</li>
-            <li class="advantages__item advantages__item--handmade">Связано вручную с любовью и умилением</li>
-            <li class="advantages__item advantages__item--domestic">Поддержка отечественного производителя</li>
-            <li class="advantages__item advantages__item--gift">Поставляется в подарочной упаковке</li>
+            <li class="advantages__item advantages__item--eco">Экологически<br> чистые материалы</li>
+            <li class="advantages__item advantages__item--price">Скандинавский стиль<br> по российской цене</li>
+            <li class="advantages__item advantages__item--likes">Увеличивает лайки<br> на фотографиях</li>
+            <li class="advantages__item advantages__item--handmade">Связано вручную с<br> любовью и умилением</li>
+            <li class="advantages__item advantages__item--domestic">Поддержка отечественного<br> производителя</li>
+            <li class="advantages__item advantages__item--gift">Поставляется в<br> подарочной упаковке</li>
           </ul>
         </div>
       </section>
