--- a/source/index.html
+++ b/source/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="contacts__item">
               <span class="contacts__label">адрес:</span>
-              <p class="contacts__text">г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8, офис 101</p>
+              <p class="contacts__text">г. Санкт-Петербург,<br> ул. Большая Конюшенная,<br> д. 19/8, офис 101</p>
             </div>
           </div>
         </div>
