--- a/source/index.html
+++ b/source/index.html
@@ -156,6 +156,10 @@
     </main>
 
     <footer class="main-footer">
+      <a class="main-footer__logo">
+        <img class="main-footer__logo-image" src="http://placehold.it/102x34" width="102" height="34" alt=" Интернет-магазин «Мишка»">
+      </a>
+
       <ul class="main-footer__social social">
         <li class="social__item">
           <a class="social__link social__link--instagram" href="#">
