--- a/source/index.html
+++ b/source/index.html
@@ -156,34 +156,36 @@
     </main>
 
     <footer class="main-footer">
-      <a class="main-footer__logo">
-        <img class="main-footer__logo-image" src="http://placehold.it/102x34" width="102" height="34" alt=" Интернет-магазин «Мишка»">
-      </a>
-
-      <ul class="main-footer__social social">
-        <li class="social__item">
-          <a class="social__link social__link--instagram" href="#">
-            <span class="visually-hidden">Инстаграм</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--facebook" href="#">
-            <span class="visually-hidden">Фейсбук</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--twitter" href="#">
-            <span class="visually-hidden">Твиттер</span>
-          </a>
-        </li>
-      </ul>
-
-      <p class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <b class="copyright__text">Разработано</b>
-          <img class="copyright__logo" src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy">
+      <div class="main-footer__wrapper">
+        <a class="main-footer__logo">
+          <img class="main-footer__logo-image" src="http://placehold.it/102x34" width="102" height="34" alt=" Интернет-магазин «Мишка»">
         </a>
-      </p>
+
+        <ul class="main-footer__social social">
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--twitter" href="#">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
+        </ul>
+
+        <p class="main-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <b class="copyright__text">Разработано</b>
+            <img class="copyright__logo" src="http://placehold.it/27x34" width="27" height="34" alt="HTML Academy">
+          </a>
+        </p>
+      </div>
     </footer>
 
     <div class="overlay"></div>
