--- a/source/form.html
+++ b/source/form.html
@@ -50,88 +50,102 @@
 
       <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
         <fieldset class="order-form__fieldset">
-          <legend class="order-form__title">Тип</legend>
-          <ul class="order-form__list order-form__wrapper">
-            <li>
-              <input class="order-form__input-radio" id="type-accessory" type="radio" name="type" value="accessory" checked>
-              <label class="order-form__label-radio" for="type-accessory">Аксессуар для интерьера</label>
-            </li>
-            <li>
-              <input class="order-form__input-radio" id="type-toy" type="radio" name="type" value="toy">
-              <label class="order-form__label-radio" for="type-toy">Детская игрушка</label>
-            </li>
-          </ul>
+          <div class="order-form__wrapper">
+            <h2 class="order-form__title">Тип</h2>
+            <ul class="order-form__list">
+              <li>
+                <input class="order-form__input-radio" id="type-accessory" type="radio" name="type" value="accessory" checked>
+                <label class="order-form__label-radio" for="type-accessory">Аксессуар для интерьера</label>
+              </li>
+              <li>
+                <input class="order-form__input-radio" id="type-toy" type="radio" name="type" value="toy">
+                <label class="order-form__label-radio" for="type-toy">Детская игрушка</label>
+              </li>
+            </ul>
+          </div>
+        </fieldset>
+
+        <fieldset class="order-form__fieldset order-form__container">
+          <div class="order-form__wrapper">
+            <h2 class="order-form__title">Цвет</h2>
+            <ul class="order-form__list order-form__list--columns">
+              <li>
+                <input class="order-form__input-check" id="color-white" type="checkbox" name="white" checked>
+                <label class="order-form__label-check" for="color-white">Белый</label>
+              </li>
+              <li>
+                <input class="order-form__input-check" id="color-grey" type="checkbox" name="grey" checked>
+                <label class="order-form__label-check" for="color-grey">Серый</label>
+              </li>
+              <li>
+                <input class="order-form__input-check" id="color-tiffany" type="checkbox" name="tiffany">
+                <label class="order-form__label-check" for="color-tiffany">«Тиффани»</label>
+              </li>
+              <li>
+                <input class="order-form__input-check" id="color-black" type="checkbox" name="black">
+                <label class="order-form__label-check" for="color-black">Черный</label>
+              </li>
+              <li>
+                <input class="order-form__input-check" id="color-pink" type="checkbox" name="pink">
+                <label class="order-form__label-check" for="color-pink">Розовый</label>
+              </li>
+              <li>
+                <input class="order-form__input-check" id="color-orange" type="checkbox" name="orange">
+                <label class="order-form__label-check" for="color-orange">Оранжевый</label>
+              </li>
+            </ul>
+          </div>
         </fieldset>
 
         <fieldset class="order-form__fieldset">
-          <legend class="order-form__title">Цвет</legend>
-          <ul class="order-form__list order-form__wrapper">
-            <li>
-              <input class="order-form__input-check" id="color-white" type="checkbox" name="white" checked>
-              <label class="order-form__label-check" for="color-white">Белый</label>
-            </li>
-            <li>
-              <input class="order-form__input-check" id="color-grey" type="checkbox" name="grey" checked>
-              <label class="order-form__label-check" for="color-grey">Серый</label>
-            </li>
-            <li>
-              <input class="order-form__input-check" id="color-tiffany" type="checkbox" name="tiffany">
-              <label class="order-form__label-check" for="color-tiffany">«Тиффани»</label>
-            </li>
-            <li>
-              <input class="order-form__input-check" id="color-black" type="checkbox" name="black">
-              <label class="order-form__label-check" for="color-black">Черный</label>
-            </li>
-            <li>
-              <input class="order-form__input-check" id="color-pink" type="checkbox" name="pink">
-              <label class="order-form__label-check" for="color-pink">Розовый</label>
-            </li>
-            <li>
-              <input class="order-form__input-check" id="color-orange" type="checkbox" name="orange">
-              <label class="order-form__label-check" for="color-orange">Оранжевый</label>
-            </li>
-          </ul>
+          <div class="order-form__wrapper">
+            <h2 class="order-form__title">ФИО</h2>
+            <div class="order-form__group">
+              <p class="order-form__field">
+                <label class="order-form__label" for="first-name">Имя:</label>
+                <input class="order-form__input" id="first-name" type="text" name="first_name" placeholder="Введите ваше имя*" required>
+              </p>
+              <p class="order-form__field">
+                <label class="order-form__label" for="last-name">Фамилия:</label>
+                <input class="order-form__input" id="last-name" type="text" name="last_name" placeholder="Укажите фамилию*" required>
+              </p>
+              <p class="order-form__field">
+                <label class="order-form__label" for="patronymic">Отчество:</label>
+                <input class="order-form__input" id="patronymic" type="text" name="patronymic" placeholder="Отчество, если желаете">
+              </p>
+            </div>
+          </div>
         </fieldset>
+
+        <div class="order-form__container">
+          <fieldset class="order-form__fieldset order-form__fieldset--singleton">
+            <div class="order-form__wrapper">
+              <h2 class="order-form__title">Тел</h2>
+              <div class="order-form__group">
+                <label class="visually-hidden" for="customer-phone">Телефон:</label>
+                <input class="order-form__input order-form__input--phone" id="customer-phone" type="tel" pattern="\+7([ -]?\d){7}" name="phone" placeholder="+7 ХХХ ХХ ХХ*" required>
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset class="order-form__fieldset order-form__fieldset--singleton">
+            <div class="order-form__wrapper">
+              <h2 class="order-form__title">E-mail</h2>
+              <div class="order-form__group">
+                <label class="visually-hidden" for="customer-email">E-mail:</label>
+                <input class="order-form__input order-form__input--email" id="customer-email" type="email" name="email" placeholder="Ваш Email*" required>
+              </div>
+            </div>
+          </fieldset>
+        </div>
 
         <fieldset class="order-form__fieldset">
-          <legend class="order-form__title">ФИО</legend>
           <div class="order-form__wrapper">
-            <p class="order-form__field">
-              <label class="order-form__label" for="first-name">Имя:</label>
-              <input class="order-form__input" id="first-name" type="text" name="first_name" placeholder="Введите ваше имя*" required>
-            </p>
-            <p class="order-form__field">
-              <label class="order-form__label" for="last-name">Фамилия:</label>
-              <input class="order-form__input" id="last-name" type="text" name="last_name" placeholder="Укажите фамилию*" required>
-            </p>
-            <p class="order-form__field">
-              <label class="order-form__label" for="patronymic">Отчество:</label>
-              <input class="order-form__input" id="patronymic" type="text" name="patronymic" placeholder="Отчество, если желаете">
-            </p>
-          </div>
-        </fieldset>
-
-        <fieldset class="order-form__fieldset order-form__fieldset--singleton">
-          <legend class="order-form__title">Тел</legend>
-          <div class="order-form__wrapper">
-            <label class="visually-hidden" for="customer-phone">Телефон:</label>
-            <input class="order-form__input order-form__input--phone" id="customer-phone" type="tel" pattern="\+7([ -]?\d){7}" name="phone" placeholder="+7 ХХХ ХХ ХХ*" required>
-          </div>
-        </fieldset>
-
-        <fieldset class="order-form__fieldset order-form__fieldset--singleton">
-          <legend class="order-form__title">E-mail</legend>
-          <div class="order-form__wrapper">
-            <label class="visually-hidden" for="customer-email">E-mail:</label>
-            <input class="order-form__input order-form__input--email" id="customer-email" type="email" name="email" placeholder="Ваш Email*" required>
-          </div>
-        </fieldset>
-
-        <fieldset class="order-form__fieldset order-form__fieldset">
-          <legend class="order-form__title">Доп</legend>
-          <div class="order-form__wrapper">
-            <label class="visually-hidden" for="customer-notes">Дополнительная информация:</label>
-            <textarea class="order-form__textarea" id="customer-notes" name="notes" cols="22" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <h2 class="order-form__title">Доп</h2>
+            <div class="order-form__group">
+              <label class="visually-hidden" for="customer-notes">Дополнительная информация:</label>
+              <textarea class="order-form__textarea" id="customer-notes" name="notes" cols="22" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            </div>
           </div>
         </fieldset>
 
