--- a/source/index.html
+++ b/source/index.html
@@ -174,6 +174,7 @@
           </div>
         </div>
         <div class="contacts__map">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043651609!2d30.320894616398647!3d59.93879418187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+Street%2C+19%2C+Sankt-Peterburg%2C+191186!5e0!3m2!1sen!2sru!4v1518476540074" width="320" height="457" allowfullscreen></iframe>
           <picture>
             <source media="(min-width: 1150px)"
                     srcset="img/map-desktop@1x.jpg 1x,
