--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
             </li>
             <li class="main-nav__item main-nav__item--user">
               <a class="main-nav__link main-nav__link--search" href="#">
-                <svg class="main-nav__icon main-nav__icon--search" width="18" height="18" viewBox="-0.8 -0.8 17.6 17.6" aria-hidden="true" role="presentation">
+                <svg class="main-nav__icon main-nav__icon--search" width="18" height="18" aria-hidden="true" role="presentation">
                   <use xlink:href="#icon-search"></use>
                 </svg>
                 <span>Поиск по сайту</span>
