--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,7 @@
     </div>
     <header class="main-header">
       <div class="main-header__top">
+        <!-- Переключение открытого и закрытого состояний: .main-nav--opened / .main-nav--closed -->
         <nav class="main-nav">
           <button class="main-nav__toggle" type="button">
             <span class="visually-hidden">Открыть меню</span>
