--- a/source/index.html
+++ b/source/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="main-header__bottom main-header__bottom--image">
         <p class="main-header__delivery">Бесплатная доставка по России</p>
-        <h1 class="main-header__title">Милые штуки ручной<br> работы для дома</h1>
+        <h1 class="main-header__title">Милые штуки ручной работы&nbsp;для&nbsp;дома</h1>
       </div>
     </header>
 
