--- a/source/catalog.html
+++ b/source/catalog.html
@@ -91,7 +91,7 @@
               <div class="product__bottom">
                 <b class="product__price">1 200 руб.</b>
                 <a class="product__to-cart" href="order.html">
-                  <svg width="20" height="19" aria-hidden="true" role="presentation">>
+                  <svg width="20" height="19" aria-hidden="true" role="presentation">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
                   <span class="visually-hidden">Заказать</span>
@@ -120,7 +120,7 @@
               <div class="product__bottom">
                 <b class="product__price">690 руб.</b>
                 <a class="product__to-cart" href="order.html">
-                  <svg width="20" height="19" aria-hidden="true" role="presentation">>
+                  <svg width="20" height="19" aria-hidden="true" role="presentation">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
                   <span class="visually-hidden">Заказать</span>
@@ -149,7 +149,7 @@
               <div class="product__bottom">
                 <b class="product__price">1 500 руб.</b>
                 <a class="product__to-cart" href="order.html">
-                  <svg width="20" height="19" aria-hidden="true" role="presentation">>
+                  <svg width="20" height="19" aria-hidden="true" role="presentation">
                     <use xlink:href="#icon-cart"></use>
                   </svg>
                   <span class="visually-hidden">Заказать</span>
